[tool.poetry]
name = "contacts_and_dates"
version = "0.1.0"
description = ""
authors = ["Aaron Imbrock <aaron@sizza.net>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.17.1"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
black = "^21.5b2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
